<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="664dp"
        android:background="@drawable/rounded_top"
        android:elevation="15dp"
        android:orientation="vertical"
        android:padding="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/manrope"
            android:gravity="center_vertical"
            android:text="E-mail"
            android:textAlignment="gravity"
            android:textColor="#101010"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:background="@drawable/field_round_white"
            android:fontFamily="@font/manrope"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/manrope"
            android:gravity="center_vertical"
            android:text="Пароль"
            android:textAlignment="gravity"
            android:textColor="#101010"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:background="@drawable/field_round_white"
            android:fontFamily="@font/manrope"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:fontFamily="@font/manrope"
            android:gravity="right|center_vertical"
            android:text="Забули свій пароль?"
            android:textAlignment="gravity"
            android:textColor="@color/main_yellow"
            android:textSize="14dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="38dp"
            android:background="@drawable/btn_round_yellow"
            app:backgroundTint="@null"
            android:fontFamily="@font/manrope_bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/action_log_in"
            android:textAllCaps="false"
            android:textSize="26dp"
            android:elevation="4dp"
            app:layout_constraintTop_toBottomOf="@+id/etRepeatPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/manrope"
                android:gravity="right"
                android:paddingRight="7dp"
                android:text="Не маєте акаунта?"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvGoToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/manrope"
                android:gravity="start"
                android:text="Зареєструватися"
                android:textColor="@color/main_yellow"
                android:textSize="15dp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="251dp"
        android:layout_height="198dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo_light" />

</androidx.constraintlayout.widget.ConstraintLayout>